# Binoxxo

./: .travis.yml  Cargo.toml  License.md  Readme.md
examples/: check_board.rs  create_board.rs
src/: bruteforce.rs  field.rs  lib.rs
src/bruteforce/: build_board.rs  choose_move.rs  mod.rs  possible_move.rs  rules.rs
tests/: issue_1.rs
