[package]
name = "binoxxo"
version = "0.2.0"
authors = ["Martin Suesskraut <martin.suesskraut@gmail.com>"]
description = "Binoxxo is a library to create and check binoxxo puzzles."
repository = "https://github.com/msuesskraut/Binoxxo"
readme = "Readme.md"
keywords = ["binoxxo", "puzzle", "puzzle-game", "game", "puzzle-generator"]
categories = ["games"]
license = "MIT"
edition = "2018"

[features]
default = []

wasm-bindgen = ["rand/wasm-bindgen"]

[dependencies]
rand = "0.7.3"

[badges]
travis-ci = { repository = "msuesskraut/Binoxxo", branch = "master" }
codecov = { repository = "msuesskraut/Binoxxo", branch = "master", service = "github" }
