[package]
name = "binoxxo"
version = "0.5.0"
authors = ["Martin Suesskraut <martin.suesskraut@gmail.com>"]
description = "Binoxxo is a library to create and check binoxxo puzzles."
repository = "https://github.com/msuesskraut/Binoxxo"
readme = "Readme.md"
keywords = ["binoxxo", "puzzle", "puzzle-game", "game", "puzzle-generator"]
categories = ["games"]
license = "MIT"
edition = "2018"

[dependencies]
rand = "0.8.3"
